--- a/app/src/main/res/layout/pantallaingreso.xml
+++ b/app/src/main/res/layout/pantallaingreso.xml
@@ -22,19 +22,30 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/lbltipo" />
+        android:text="@string/lbltipo"
+        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/spinner1"
+        android:layout_alignStart="@+id/spinner1" />
 
     <Spinner
         android:id="@+id/spinner1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/opciones" />
+        android:entries="@array/opciones"
+        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_alignStart="@+id/textView1"
+        android:layout_marginTop="42dp" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/lblID" />
+        android:text="@string/lblID"
+        android:layout_toLeftOf="@+id/button2"
+        android:layout_toStartOf="@+id/button2"
+        android:layout_alignBottom="@+id/spinner1"
+        android:layout_below="@+id/spinner1" />
 
     <EditText
         android:id="@+id/editText1"
@@ -70,7 +81,11 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:text="@string/prodcosto"/>
+        android:text="@string/prodcosto"
+        android:layout_above="@+id/button1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="63dp" />
 
     <Button
         android:id="@+id/button1"
@@ -78,7 +93,10 @@
         android:layout_height="wrap_content"
         android:text="@string/btnIngresar"
         android:layout_gravity="center"
-        android:onClick="productoagregar"/>
+        android:onClick="productoagregar"
+        android:layout_above="@+id/button2"
+        android:layout_alignRight="@+id/button2"
+        android:layout_alignEnd="@+id/button2" />
 
     <Button
         android:id="@+id/button2"
@@ -86,7 +104,10 @@
         android:layout_height="wrap_content"
         android:text="@string/btnSalir"
         android:layout_gravity="center"
-        android:onClick="irmenu"/>
+        android:onClick="irmenu"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="61dp" />
 
 
 </RelativeLayout>
