--- a/app/src/main/res/layout/reservacion2.xml
+++ b/app/src/main/res/layout/reservacion2.xml
@@ -1,42 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
 
 
     <TextView
-        android:id="@+id/ProductName"
+        android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:text="MIPRODUCTO"
+        android:text="@string/ingreso"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:textColor="#ff0d07ef"
+        android:textColor="#EF1515"
 
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_margin="10dp" />
 
-    <ListView
-        android:id="@+id/sublista"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbltipo" />
+
+    <Spinner
+        android:id="@+id/spinner1"
         android:layout_width="match_parent"
-        android:layout_height="254dp" >
-    </ListView>
+        android:layout_height="wrap_content"
+        android:entries="@array/opciones" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblID" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/prodcodigo">
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblnombre" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/prodnombre"/>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblcosto" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:text="@string/prodcosto"/>
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/btnIngresar"
         android:layout_gravity="center"
-        android:onClick="irmenu"
-        android:text="Agregar más Productos" />
+        android:onClick="productoagregar"/>
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/btnSalir"
         android:layout_gravity="center"
-        android:text="Terminar Compra"
-        android:onClick="terminarcompra" />
+        android:onClick="irmenu"/>
 
-</RelativeLayout>
+</LinearLayout>
