--- a/app/src/main/res/layout/reservacion2.xml
+++ b/app/src/main/res/layout/reservacion2.xml
@@ -1,92 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/ProductName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:text="@string/ingreso"
+        android:text="MIPRODUCTO"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:textColor="#EF1515"
+        android:textColor="#ff0d07ef"
 
-        android:gravity="center"
-        android:layout_margin="10dp" />
+        android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lbltipo" />
-
-    <Spinner
-        android:id="@+id/spinner1"
+    <ListView
+        android:id="@+id/sublista"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/opciones" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lblID" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:text="@string/prodcodigo">
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lblnombre" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:text="@string/prodnombre"/>
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lblcosto" />
-
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:text="@string/prodcosto"/>
+        android:layout_height="254dp" >
+    </ListView>
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btnIngresar"
         android:layout_gravity="center"
-        android:onClick="productoagregar"/>
+        android:onClick="irmenu"
+        android:text="Agregar más Productos" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btnSalir"
         android:layout_gravity="center"
-        android:onClick="irmenu"/>
+        android:text="Terminar Compra"
+        android:onClick="terminarcompra" />
 
-</LinearLayout>
+</RelativeLayout>
