--- a/app/src/main/res/layout/crearcuenta.xml
+++ b/app/src/main/res/layout/crearcuenta.xml
@@ -12,24 +12,25 @@
         android:text="@string/idusuario" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/b4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView4"
         android:ems="10"
-        android:inputType="number" />
+        android:inputType="textPassword"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editText1"
+        android:layout_below="@+id/b1"
         android:text="@string/nombrecliente" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/b1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -38,7 +39,7 @@
         android:inputType="number" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/b2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -56,11 +57,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/b2"
         android:text="@string/correo" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/b3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -75,29 +76,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:inputType="textPassword"
-        android:text="@string/contraseña"
-        android:layout_below="@+id/editText3"
-        android:layout_toLeftOf="@+id/button1"
-        android:layout_toStartOf="@+id/button1" />
+        android:text="CONTRASEÑA"
+        android:layout_toStartOf="@+id/button5"
+        android:layout_below="@+id/b3"
+        android:layout_toLeftOf="@+id/button5" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="fagregar"
+        android:onClick="agregar"
         android:text="@string/crear"
-        android:layout_centerVertical="true"
+        android:layout_above="@+id/button5"
         android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="irmenu"
+        android:onClick="atras"
         android:text="@string/btnSalir"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/b4"
+        android:layout_alignEnd="@+id/b4"
+        android:layout_marginBottom="96dp" />
 
 </RelativeLayout>
