--- a/app/src/main/res/layout/medio.xml
+++ b/app/src/main/res/layout/medio.xml
@@ -33,5 +33,16 @@
         android:layout_alignLeft="@+id/button1"
         android:layout_alignStart="@+id/button1" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CLIENTES"
+        android:id="@+id/button6"
+        android:layout_marginTop="58dp"
+        android:layout_below="@+id/button2"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_alignStart="@+id/button2"
+        android:onClick="adcl"/>
+
 
 </RelativeLayout>
