--- a/app/src/main/res/layout/pantallagrupo.xml
+++ b/app/src/main/res/layout/pantallagrupo.xml
@@ -28,7 +28,7 @@
         android:text="@string/lblID" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/b1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -43,7 +43,7 @@
         android:text="@string/lblnombre" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/b2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
