--- a/app/src/main/res/layout/pantallaingreso.xml
+++ b/app/src/main/res/layout/pantallaingreso.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -43,16 +43,20 @@
         android:layout_height="wrap_content"
         android:text="@string/lblID"
         android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2"
         android:layout_alignBottom="@+id/spinner1"
-        android:layout_below="@+id/spinner1" />
+        android:layout_below="@+id/spinner1"
+        android:layout_toRightOf="@+id/textView2"
+        android:layout_toEndOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/b1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="@string/prodcodigo">
+        android:text="@string/prodcodigo"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView3">
         <requestFocus />
     </EditText>
 
@@ -60,23 +64,34 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/lblnombre" />
+        android:text="@string/lblnombre"
+        android:layout_alignBaseline="@+id/textView5"
+        android:layout_alignBottom="@+id/textView5"
+        android:layout_toLeftOf="@+id/textView3"
+        android:layout_toStartOf="@+id/textView3" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/b2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="@string/prodnombre"/>
+        android:text="@string/prodnombre"
+        android:layout_alignBaseline="@+id/b3"
+        android:layout_alignBottom="@+id/b3"
+        android:layout_alignLeft="@+id/spinner1"
+        android:layout_alignStart="@+id/spinner1" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/lblcosto" />
+        android:text="@string/lblcosto"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/textView3"
+        android:layout_toStartOf="@+id/textView3" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/b3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -110,4 +125,4 @@
         android:layout_marginBottom="61dp" />
 
 
-</RelativeLayout>
+</LinearLayout>
