--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -13,7 +13,7 @@
         android:text="@string/titulo"
         android:id="@+id/textView"
         android:background="@color/accent_material_light"
-        android:layout_below="@+id/textView6"
+        android:layout_above="@+id/imageView"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -22,9 +22,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="      BIENVENIDOS         "
         android:id="@+id/textView6"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/accent_material_light"/>
+        android:background="@color/accent_material_light"
+        android:layout_above="@+id/textView"
+        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -63,5 +63,23 @@
         android:layout_below="@+id/textView15"
         android:layout_alignLeft="@+id/textView15"
         android:layout_alignStart="@+id/textView15" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Qushpe Jessica"
+        android:id="@+id/textView17"
+        android:layout_below="@+id/textView16"
+        android:layout_alignLeft="@+id/textView16"
+        android:layout_alignStart="@+id/textView16" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="UCE"
+        android:id="@+id/textView18"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
