--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -23,7 +23,7 @@
         android:text="      BIENVENIDOS         "
         android:id="@+id/textView6"
         android:background="@color/accent_material_light"
-        android:layout_above="@+id/textView"
+        android:layout_below="@+id/imageView6"
         android:layout_centerHorizontal="true" />
 
     <ImageView
@@ -58,7 +58,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Quimbiulco Richar"
+        android:text="Quimbiulco Richard"
         android:id="@+id/textView16"
         android:layout_below="@+id/textView15"
         android:layout_alignLeft="@+id/textView15"
@@ -80,6 +80,16 @@
         android:text="UCE"
         android:id="@+id/textView18"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@color/accent_material_light"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView6"
+        android:src="@drawable/uce"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView" />
 
 </RelativeLayout>
