--- a/app/src/main/res/layout/presentacion.xml
+++ b/app/src/main/res/layout/presentacion.xml
@@ -50,7 +50,9 @@
         android:src="@drawable/verduras"
         android:layout_alignTop="@+id/imageView3"
         android:layout_toRightOf="@+id/imageView3"
-        android:layout_toEndOf="@+id/imageView3" />
+        android:layout_alignBottom="@+id/imageView3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -114,11 +116,11 @@
         android:layout_height="wrap_content"
         android:text="Administracion"
         android:id="@+id/button3"
-        android:layout_below="@+id/imageView5"
-        android:layout_toLeftOf="@+id/imageView5"
-        android:layout_toStartOf="@+id/imageView5"
         android:onClick="logeoadministrador"
-        android:background="@color/common_signin_btn_light_text_focused"/>
+        android:background="@color/common_signin_btn_light_text_focused"
+        android:layout_below="@+id/textView7"
+        android:layout_toRightOf="@+id/textView7"
+        android:layout_toEndOf="@+id/textView7" />
 
 
 </RelativeLayout>
