--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -23,7 +23,7 @@
         android:text="      BIENVENIDOS         "
         android:id="@+id/textView6"
         android:background="@color/accent_material_light"
-        android:layout_below="@+id/imageView6"
+        android:layout_alignBottom="@+id/imageView6"
         android:layout_centerHorizontal="true" />
 
     <ImageView
@@ -31,10 +31,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:src="@drawable/tienda"
+        android:onClick="irpresentacion"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="irpresentacion"/>
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
         android:id="@+id/imageView6"
         android:src="@drawable/uce"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_toRightOf="@+id/textView6"
+        android:layout_toEndOf="@+id/textView6" />
 
 </RelativeLayout>
